demo-crm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-crm-ingress
  annotations:
    kubernetes.io/ingress.class: 'gce' # Use GCE ingress controller
spec:
  rules:
    - host: osher-demo.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-crm-service
                port:
                  number: 80
